# CanvasWindowComposer

./: .gitattributes  .gitignore  .gitmodules  CanvasDesktop.csproj  CanvasDesktop.slnx  DllInjector.cs  InertiaEngine.cs  LICENSE  MouseHook.cs  NativeMethods.cs  NativeMethods.txt  README.md  TrayApp.cs  WindowMover.cs
Docs/: dwm-removal-followups.md  dwm-removal-research.md  merge-overview-renderer-plan.md  overlay-click-through-notes.md  testability-plan.md
Install/: build-installer.bat  installer.nsi
Source/: AppConfig.cs  Canvas.cs  GlobalUsings.cs  GridRenderer.cs  HotkeyWindow.cs  InertiaEngine.cs  InjectedMemory.cs  MessageWindow.cs  MinimapOverlay.cs  MouseHook.cs  NativeMethods.cs  OverviewOverlay.cs  Program.cs  SearchOverlay.cs  TrayApp.cs  VirtualDesktopService.cs  WindowManager.cs  ZoomSharedMemory.cs
Source/Application/: AppConfig.cs  AssemblyInfo.cs  DesktopRefreshWatcher.cs  DesktopStateCache.cs  ForegroundCoordinator.cs  Program.cs  TrayApp.cs
Source/Core/: Canvas.cs  InertiaEngine.cs  InertiaTracker.cs  WindowManager.cs  WindowSearchService.cs
Source/Overlays/: GridRenderer.cs  IOverviewController.cs  MinimapOverlay.cs  MinimapRenderer.cs  OverviewInputs.cs  OverviewManager.cs  OverviewOverlay.cs  OverviewState.cs  OverviewThumbnails.cs  SearchOverlay.cs  (+1 more)
Tests/: .gitignore  CanvasDesktop.Tests.csproj  CanvasTests.cs  DesktopStateCacheTests.cs  FakeAppConfig.cs  FakeClock.cs  FakeInputRouter.cs  FakeOverviewController.cs  FakeScreens.cs  FakeVirtualDesktops.cs  FakeWindowApi.cs  ForegroundCoordinatorTests.cs  InertiaTrackerTests.cs  OverviewCameraTests.cs  OverviewInputsTests.cs  OverviewStateTests.cs  OverviewWindowListTests.cs  SMOKE_TEST.md  WindowManagerEventTests.cs  WindowManagerTests.cs  WindowSearchServiceTests.cs  run_tests.bat  smoke_test.ahk
native/: CMakeLists.txt  DpiHook.c
(+35 files in other folders)
